# django-api

./: db.sqlite3  docker-compose.yml  manage.py  requirements.txt
app/: Dockerfile  manage.py  pyproject.toml
app/app/: settings.py  urls.py
app/boards/: serializers.py
app/boards/migrations/: 0001_initial.py
app/clone/: admin.py  serializers.py
app/clone/migrations/: 0001_initial.py
app/config/: settings.py  urls.py
app/contents/: models.py  serializers.py
app/contents/migrations/: 0001_initial.py
app/core/: admin.py
app/pages/: models.py  serializers.py  views.py
app/pages/migrations/: 0001_initial.py
app/people/: admin.py  models.py  serializers.py
app/posts/: models.py  serializers.py
app/posts/migrations/: 0001_initial.py
app/subjects/: admin.py  models.py  serializers.py
app/subjects/migrations/: 0001_initial.py
app/users/: admin.py  models.py  serializers.py
app/users/migrations/: 0001_initial.py
boards/: models.py
boards/migrations/: 0002_alter_board_description.py
clone/: models.py  urls.py  views.py
clone/migrations/: 0002_alter_clone_count_alter_clone_page.py
config/: settings.py  urls.py
people/: models.py
people/migrations/: 0001_initial.py
subjects/: models.py
